5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1800_2567.log
== TEST (2019-06-06 11:34:02) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
for i in x:
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in x:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:34:23) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
for i in x:
	print(x * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in x:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:18:43) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in x:
	print(x * "*")
	x = x - 1
x = 
-- ERROR:
File "XXXX", line 6
    x = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:18:48) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in x:
	print(x * "*")
	x = x - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:18:54) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in x:
	print(x * "*")
	x = x - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:32) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in x:
	print(x * "*")
	x = x - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:02) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in range(x):
	print(x * "*")
	x = x - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:24:13) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in range(x):
	print(x * "*")
	
for 
-- ERROR:
File "XXXX", line 6
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:24:16) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in range(x):
	print(x * "*")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:51) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
for i in range(x):
	print(x * "*")
	x = x - 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:43) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
x 
for i in range(x):
	print(x * "*")
	x = x - 1
k = 1
for j in range(x):
	print(x * "*")
	x = x+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:31:52) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(k):
	print(k * "*")
	k = k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:57) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(k):
	print(k - (k - (k-1)) * "*")
	k = k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:17) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(k):
	print((k - (k - (k-1))) * "*")
	k = k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:34:29) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(k + 1):
	print(k * "*")
	k = k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:35:53) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))

for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(x + 1):
	print(x * "*")
	x = x+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:36:29) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
x = k
for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(k + 1):
	print(k * "*")
	k = k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:36:59) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
x = k
for i in range(x):
	print(x * "*")
	x = x - 1

for j in range(k + 1):
	print(k * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:31) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
x = k
for i in range(x):
	print(x * "*")
	i = i - 1

for j in range(k + 1):
	print(k * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:46) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	i = i - 1

for j in range(k + 1):
	print(k * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:12) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	i = i - 1

for j in range(k + 1):
	print(j * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:19) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	i = i - 1

for j in range(k + 1):
	print(j * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:38:23) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	i = i - 1

for j in range(k + 1):
	print(j * "*")
	j = j+1

-- EXECUTION TIME:
1.02138
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
*
**
***
****
*****
******
*******

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
*
**
***
****
*****
******
*******
********
*********
**********

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:28) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	i = i - 1

for j in range(k + 1):
	print(j * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:39:23) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	i = i - 1

for j in range(k + 1):
	print(j * "*")
	j = j+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:45) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	x = x - 1
x = x + 1
for j in range(k + 1):
	print(k * "*")
	k = k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:12) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	x = x - 1
x = x + 1
for j in range(k):
	print(x * "*")
	x = x + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:20) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(i * "*")
	x = x - 1
x = x + 1
for j in range(k):
	print(x * "*")
	x = x + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:38) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1
x = x + 1
for j in range(k):
	print(x * "*")
	x = x + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:43:47) 
-- CODE:
from numpy import *
x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1
x = x + 1
for j in range(k):
	print(x * "*")
	x = x + 1

-- EXECUTION TIME:
0.991635
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:46:16) 
-- CODE:

x = int(input("Nmr de asteriscos: "))
k = x
for i in range(x):
	print(x * "*")
	x = x - 1
x = x + 1
for j in range(k):
	print(x * "*")
	x = x + 1

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
